[gd_scene load_steps=2 format=3 uid="uid://h7o46v40d850"]

[ext_resource type="Script" path="res://scripts/loadscreen.gd" id="1_yyvxu"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_yyvxu")
port = 10215
server_addr = "127.0.0.1"
capacity = 4095

[node name="BG" type="ColorRect" parent="."]
offset_left = -2.0
offset_right = 638.0
offset_bottom = 360.0
color = Color(0.454902, 0.427451, 0.431373, 1)

[node name="HostMenu" type="VBoxContainer" parent="."]
offset_left = 141.0
offset_top = 131.0
offset_right = 185.0
offset_bottom = 197.0

[node name="Host" type="Button" parent="HostMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Host"

[node name="JoinMenu" type="VBoxContainer" parent="."]
offset_left = 439.0
offset_top = 124.0
offset_right = 506.0
offset_bottom = 190.0
alignment = 1

[node name="Join" type="Button" parent="JoinMenu"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="HostMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="JoinMenu/Join" to="." method="_on_join_pressed"]
